# PetCare

./: .gitignore
backend/: Cargo.toml
backend/migrations/: 20260528000000_init.sql
backend/src/: db.rs  main.rs
backend/src/handlers/: agendamento_handler.rs  cliente_handler.rs  mod.rs  pet_handler.rs  servico_handler.rs
backend/src/models/: agendamento.rs  cliente.rs  mod.rs  pet.rs  servico.rs  usuario.rs
backend/src/routes/: mod.rs
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AgendamentoModal.jsx
frontend/src/pages/: AdminPanel.jsx  LandingPage.jsx  LoginPage.jsx
server/: petcare_data.json  server.js
